--- a/ElectroStaticModelGUI/.classpath
+++ b/ElectroStaticModelGUI/.classpath
@@ -13,8 +13,11 @@
 			<attribute name="org.eclipse.jdt.launching.CLASSPATH_ATTR_LIBRARY_PATH_ENTRY" value="E:/xtraJavaLibs/dependencies"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/misc"/>
 	<classpathentry exported="true" kind="lib" path="E:/xtraJavaLibs/dependencies/org.jzy3d-0.9.jar"/>
 	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/org.eclipse.swt"/>
-	<classpathentry combineaccessrules="false" exported="true" kind="src" path="/ElectroStaticModel"/>
+	<classpathentry exported="true" kind="lib" path="E:/xtraJavaLibs/packages/j3d/lib/ext/vecmath.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JCommon"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JFreeChart"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
