--- a/DrDuncansElectroStaticModeler/.project
+++ b/DrDuncansElectroStaticModeler/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ElectroStaticModelGUI</name>
+	<name>DrDuncansElectroStaticModeler</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -14,4 +14,17 @@
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/electroStaticUI/Splash.jpg</name>
+			<type>1</type>
+			<location>E:/ElectrostaticChargeCalculator/DrDuncansElectroStaticModeler/Splash.jpg</location>
+		</link>
+	</linkedResources>
+	<variableList>
+		<variable>
+			<name>nativeLibs</name>
+			<value>file:/E:/ElectrostaticChargeCalculator/DrDuncansElectroStaticModeler/nativeLibraries</value>
+		</variable>
+	</variableList>
 </projectDescription>
